# durian-ai

./: .gitignore  LICENSE  README.md  datalake.db  pyproject.toml
app/: __init__.py  main.py
app/core/: config.py
app/db/: session.py
app/models/: sales.py
app/routers/: datalake.py
app/schemas/: query.py
app/services/: datalake_agent.py
